# rust_daily

./: README.md
day21/: Cargo.toml
day21/doc/: a
day21b/: Cargo.toml
day22/src/: main.rs
day23/src/: main.rs
day24/src/: main.rs
day26/: Cargo.toml
day26/src/: main.rs
day27/: Cargo.toml
day27/src/: main.rs
docs/: 100_questions.html  404.html  bash_utils.html  chapter_1.html  chapter_2.html  chapter_3.html  functional.html  go_and_rust.html  hashmap_1.html  index.html  print.html  raw_notes.html  rust_aws_sdk_1.html  rust_repos.html  searchindex.js  searchindex.json  solid.html  videos_1.html
each_day/bank_dip/: Cargo.toml
each_day/day28/: Cargo.toml
each_day/day29/: Cargo.toml  README.md
each_day/day29/src/: main.rs
each_day/day29b/: Cargo.toml
each_day/day30/: Cargo.toml
each_day/day32/: Cargo.toml
each_day/day32b/: Cargo.toml
each_day/day32c/: Cargo.toml
each_day/day33/: Cargo.toml
each_day/day33b/: Cargo.toml
each_day/day33c/: Cargo.toml
each_day/day34/: Cargo.toml
each_day/day35/: Cargo.toml
each_day/day36/: Cargo.toml
each_day/day37/: Cargo.toml
each_day/day38/: Cargo.toml
each_day/day40/: Cargo.toml
each_day/day43/: Cargo.toml
each_day/day44/: Cargo.toml
each_day/day45/: Cargo.toml
each_day/my_mock_base/: Cargo.toml  README.md
each_day/my_mock_simple/: Cargo.toml  venonalog.json
each_day/openapi/: Cargo.toml
each_day/server/: Cargo.toml
each_day/simple_adder/: Cargo.toml
project1/aws_project/: Cargo.toml
project1/aws_project/src/: main.rs
theBook/: CNAME  book.toml  build.sh
(+58 files in other folders)
