[package]
name = "day29"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-sdk-sqs = "0.24.0"
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.16"
