[package]
name = "aws_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-cloudwatch = "0.24.0"
aws-sdk-ec2 = "0.24.0"
aws-sdk-sts = "0.24.0"
aws-config = "0.54.1"
aws-types = "0.54.1"

tokio = { version = "1.13.0", features = ["full"] }